--- a/Croquis(.NET Framework)/Croquis(.NET Framework).csproj
+++ b/Croquis(.NET Framework)/Croquis(.NET Framework).csproj
@@ -77,6 +77,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Debug\</OutputPath>
+    <Optimize>true</Optimize>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
@@ -121,9 +123,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AppSetting.xaml.cs">
+      <DependentUpon>AppSetting.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ResourceService.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="StartUp.cs" />
+    <Page Include="AppSetting.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
